--- a/view/layout/partial/footer.phtml
+++ b/view/layout/partial/footer.phtml
@@ -1,10 +1,9 @@
-<div class="row">
-    <footer>
-        <hr>
-        <p>
-            Copyright &copy; <?php echo $this->year; ?> by
-            <a href="<?php echo $this->url('home') ?>"> <?php echo $this->org; ?></a>. 
-            <?php echo 'All rights reserved.'; ?>
-        </p>
-    </footer>
+<strong> 
+    <a href="<?php echo $this->url("home"); ?>">
+        <?php echo strtoupper("Iligan Access Institute of Technology, Inc.")?> 
+    </a>
+</strong>
+<div class="pull-right hidden-xs">
+    Copyright &copy; <?php echo date('Y'); ?> by <a href="http://www.codingmatters.io/" target="_blank"> Coding Matters, Inc. </a>
+    All rights reserved.
 </div>
