--- a/view/layout/template/navigation/header.phtml
+++ b/view/layout/template/navigation/header.phtml
@@ -2,7 +2,8 @@
 /* @var $container Zend\Navigation\Navigation */
 $container = $this->container;
 ?>
-<ul class="<?php echo $this->navigation()->menu()->getUlClass(); ?>">
+<ul class="nav nav-pills">
+    <li class="quicklinks"> <span class="h-seperate"></span></li>
     <?php foreach ($container as $page): ?>
         <?php if (!$this->navigation()->accept($page)) continue; ?>
         <?php /* @var $page Zend\Navigation\Page\Mvc */ ?>
@@ -10,18 +11,18 @@ $container = $this->container;
         <?php if (!$hasChildren): ?>
             <li<?php if ($page->isActive()) echo ' class="active"' ?>>
                 <a 
-                    class="nav-header" 
                     href="<?php echo $page->getHref() ?>"
                     <?php if ($page->getTarget() != ""): ?>
                         target="<?php echo $page->getTarget(); ?>"
                     <?php endif; ?>
                     >
-                        <?php if ($page->get("icon") !== ""): ?>
-                        <span class="<?php echo $page->get("icon"); ?>"></span>
+                    <?php if ($page->get("icon") !== ""): ?>
+                        <i class="<?php echo $page->get("icon"); ?>"></i>
                     <?php endif; ?>
-                    <?php echo $page->getLabel() ?>
+                    <span class="title"><?php echo $page->getLabel() ?></span>
                 </a>
             </li>
+            <li class="quicklinks"> <span class="h-seperate"></span></li>
         <?php else: ?>
             <?php
             //check if access is allowed at least one item
@@ -33,15 +34,15 @@ $container = $this->container;
             }
             if ($access) :
                 ?>
-                <li class="dropdown<?php if ($page->isActive(true)) echo ' active' ?>">
+                <li class="parents <?php if ($page->isActive(true)) echo 'active' ?>">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <?php if ($page->get("icon") !== ""): ?>
-                            <span class="<?php echo $page->get("icon"); ?>"></span>
+                            <i class="<?php echo $page->get("icon"); ?>"></i>
                         <?php endif; ?>
-                        <?php echo $page->getLabel() ?>
+                        <span class="title"><?php echo $page->getLabel() ?></span>
                         <b class="caret"></b>
                     </a>
-                    <ul class="dropdown-menu">
+                    <ul class="children">
                         <?php foreach ($page->getPages() as $child): ?>
                             <?php if (!$this->navigation()->accept($child)) continue; ?>
                             <?php if ($child->get("separator") === true): ?>
@@ -57,14 +58,15 @@ $container = $this->container;
                                         target="<?php echo $child->getTarget(); ?>"
                                     <?php endif; ?> >
                                         <?php if ($child->get("icon") !== ""): ?>
-                                        <span class="<?php echo $child->get("icon"); ?>"></span>
+                                        <i class="<?php echo $child->get("icon"); ?>"></i>
                                     <?php endif; ?>
-                                    <?php echo $child->getLabel() ?>
+                                    <span class="title"><?php echo $child->getLabel() ?></span>
                                 </a>
                             </li>
                         <?php endforeach ?>
                     </ul>
                 </li>   
+                <li class="quicklinks"> <span class="h-seperate"></span></li>
             <?php endif; ?>
         <?php endif ?>
     <?php endforeach ?>
