--- a/templates/layout/partial/footer.phtml
+++ b/templates/layout/partial/footer.phtml
@@ -1,9 +1,11 @@
-<strong> 
-    <a href="<?php echo $this->url("home"); ?>">
-        <?php echo strtoupper("Iligan Access Institute of Technology, Inc.")?> 
-    </a>
-</strong>
-<div class="pull-right hidden-xs">
-    Copyright &copy; <?php echo date('Y'); ?> by <a href="http://www.codingmatters.io/" target="_blank"> Coding Matters, Inc. </a>
-    All rights reserved.
+<div class="row">                
+    <div class="col-md-6">
+        All rights reserved. Copyright &copy; <?php echo $this->layout()->copyright_year; ?>
+        <a href="<?php echo $this->url('home') ?>"> <?php echo $this->layout()->organization; ?></a>
+    </div>
+    <div class="cold-md-6">
+        <span class="pull-right">
+            A proud partner of <a href="http://www.codingmatters.io" target="_blank">Coding Matters, Inc.</a>                            
+        </span>
+    </div>
 </div>
